tests/models/struct/unnamed/vec/fail/default.rs
use dade::model;
#[model]
struct TestModel (
   #[field(default = 1)]
    Vec<()>
);
fn main() {}
